[project]
name = "docflow-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Bochkarev",email = "ibochkarev@kamaz.digital"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "docflow_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
